# Redstone-Squid

./: .cursorignore  .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  DOCKER.md  Dockerfile  LICENSE  README.md  api.py  app.py  common.py  compose.yml  dev-requirements.in  dev-requirements.txt  environment.yml  justfile  package-lock.json  package.json  pgstrap.config.js  pyproject.toml  requirements.in  requirements.txt  schema_dump.sql  test-requirements.in  test-requirements.txt  tmp.sql
.cursor/rules/: create-new-migration.mdc  current-project-issues.mdc  project-conventions.mdc  redstone-squid-overview.mdc
.github/workflows/: cd.yml  ci.yml  codeql.yml  deploy-on-push.yml  requirements-sync.yml
Database/: README.md  _types.py  builds.py  config.py  database.py  enums.py  global_vars.py  main.py  message.py  schema.py  server_settings.py  submission.py  submissions.py  types.py  utils.py
Database/migrations/: 20240404000001_base_tables.sql  20240405114415_change-message-pkey.sql  20240406102745_rename_builds.sql  20240411070035_normalize.sql  20240418030123_on_delete_cascade.sql  2024_04_04_000001_base_tables.sql
Discord/: _types.py  command.py  command_branch.py  command_leaf.py  commands.py  config.py  help.py  interface.py  main.py  misc_commands.py  permissions.py  settings.py  slash_commands.py  types_.py  utils.py
Discord/option/: option.py
Discord/settings/: settings.py
Discord/submission/: post.py  submission.py  submissions.py  submit.py  voting.py
Google/: README.md  interface.py
bot/: _types.py  admin.py  config.py  converter.py  delete_log.py  give_redstoner.py  help.py  log.py  main.py  misc_commands.py  schema.py  search.py  settings.py  types_.py  utils.py  verify.py  vote_session.py
bot/submission/: build_mixin.py  edit.py  navigation_view.py  parse.py  post.py  prompt.txt  search.py  submit.py  ui.py  voting.py
bot/voting/: vote.py  vote_session.py
database/: __init__.py  builds.py  database.py  enums.py  message.py  schema.py  server_settings.py  user.py  utils.py  vote.py
database/migrations/: 20240404114301_vote_channel.sql  20240411070035_normalize.sql  20240803102322_message_purpose_not_null.sql  20240804093229_users.sql  20240824075232_add_version_functions.sql
database/voting/: vote_session.py
docs/: new-build-attribute.md  new-migration.md
docs/readme/: README-is.md
google/: interface.py
logs/: .gitkeep
requirements/: base.txt  dev.in  dev.txt
schema/: README.md
schema/structure/public/: grants.sql
schema/structure/public/functions/: delete_orphaned_build_vote_sessions_after_builds_delete.sql  find_restriction_ids.sql  (+12 more)
scripts/: README.md  add-tests-supabase-submodule.sh  deploy.sh  populate_db_with_logs_historical_messages.py  pre-push
scripts/migrations/: 20250207124432_messages_normalisation_add_author_info.py
squid/: api.py  config.py  logging_config.py  sentinel.py  utils.py
squid/bot/: __init__.py  _types.py  admin.py  config.py  converter.py  events_dispatcher.py  give_redstoner.py  help.py  log.py  main.py  misc_commands.py  settings.py  utils.py  verify.py  version_tracker.py  version_tracking.py  vote.py  welcome_relay.py  worker.py
squid/bot/services/: vote.py  vote_service.py
squid/bot/submission/: __init__.py  build_handler.py  build_mixin.py  edit.py  navigation_view.py  parse.py  search.py  submit.py  ui.py
squid/bot/utils/: __init__.py  converters.py  embeds.py  permissions.py  sentinel.py  web.py
squid/bot/voting/: decoupled_vote_session.py  vote.py  vote_session.py  voting_service.py
squid/core/: build_service.py  message_service.py  restriction_service.py  server_settings_service.py  type_service.py  user_service.py  version_service.py  vote_session_service.py
squid/database/: __init__.py  builds.py  message.py  server_settings.py  user.py  utils.py
squid/db/: __init__.py  build_manager.py  build_tags.py  builds.py  inspect_db.py  message.py  models.py  prompt.txt  schema.py  server_settings.py  user.py  utils.py  vote_session.py  voting.py
squid/db/domain/: __init__.py  user.py  verification.py
squid/db/repos/: __init__.py  message_repository.py  user.py  user_repository.py  verification.py
squid/db/services/: __init__.py  user.py  user_service.py
squid/google/: README.md  interface.py
squid/services/: __init__.py  build_service.py  user_service.py
supabase/: config.toml  seed.sql
supabase/migrations/: 20240406095222_remote_schema.sql  20240411104539_normalize.sql  20240418080451_nullable_builds.sql  20240804101429_verification_code.sql  20240805004730_store_username_in_verification_codes.sql  20240824075232_add_version_functions.sql  20240826080645_add_in_server_column.sql  20240828142716_versions_not_null.sql  20250103034912_fix_local_remote_difference.sql  20250104073413_voting.sql  20250105102457_fix_submitter_id_null.sql  20250105141956_store_original_message.sql  20250108081852_build_embedding.sql  20250108112544_vecs.sql  20250108114038_no_orphaned_vote_session.sql  20250108120722_build_message_link.sql  20250111144125_message_content.sql  20250112095150_restriction_aliases.sql  20250113072010_ids_default_empty_array.sql  20250114025256_find_restriction_by_name.sql  20250116014009_fix_get_outdated_messages.sql  20250129122053_add_improvements.sql  20250131081045_build_lock.sql  20250207124432_messages_normalisation.sql  20250606034710_revert_vote_session_messages.sql  20250610112504_recalc_build_aliases.sql  20250623094925_records_cache.sql  20250623154127_add_build_title.sql  20250627091009_event_outbox.sql  20250628031950_vote_session_emojis.sql  20250711011459_event_on_vote_session_close.sql  20260330091500_vote_session_result.sql
tests/: README.md  conftest.py  test_placeholder.py
tests/integration/: test_pg_only_db_manager.py  test_sqlalchemy_models_match_database.py
tests/postgres/: Dockerfile  init.sql
tests/unit/: test_api.py  test_build_core.py  test_build_title.py  test_database_manager.py  test_logging_config.py  test_utils.py  test_vote_session_manager.py
(+54 files in other folders)
