[project]
name = "redstone-squid"
version = "1.5.7"
requires-python = ">=3.12"
readme = "README.md"
# Whenever the dependencies change, run
# 1. uv export -o requirements/base.txt
# 2. uv export --only-dev -o requirements/dev.txt
dependencies = [
    "oauth2client>=4.1.3",
    "discord-py[speed]>=2.5.0,<3",
    "gspread>=6.1.4",
    "supabase>=2.11.0",
    "python-dotenv>=1.0.1",
    # Using our own fork which fixes https://github.com/supabase/postgrest-py/issues/340
    "postgrest @ git+https://github.com/redstone-squid/postgrest-py",
    "jishaku>=2.6.0",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "openai>=1.58.1",
    "async-lru>=2.0.4",
    "markdown>=3.7",
    "beautifulsoup4>=4.12.3",
    "vecs>=0.4.5",
    "gitpython>=3.1.31",
    "beartype>=0.19.0",
    "discord-ext-menus @ git+https://github.com/Rapptz/discord-ext-menus",
]

[dependency-groups]
# Note: changes to this group has to be synced with requirements/dev.txt
# uv export --only-dev -o requirements/dev.txt
dev = [
    "pip-tools>=7.4.1",
    "ruff>=0.5.1",
    "basedpyright>=1.24.0",
    "bump-my-version>=0.29.0",
    "pytest-cov>=6.1.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
ignore = ["E731"]

[tool.ruff.format]
docstring-code-format = true

[tool.bumpversion]
current_version = "1.5.7"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = true
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
files.glob = "**/config.py,pyproject.toml"

[tool.basedpyright]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "standard"
exclude = ["**/node_modules", "**/__pycache__", "**/.*", "scripts/migrations"]

strictListInference = true
strictDictionaryInference = true
strictSetInference = true
deprecateTypingAliases = true
reportPropertyTypeMismatch = "error"
reportUntypedFunctionDecorator = "information"
reportUntypedClassDecorator = "information"
reportUntypedBaseClass = "information"
reportUntypedNamedTuple = "information"
reportPrivateUsage = "warning"
reportConstantRedefinition = "information"
reportDeprecated = "information"
reportInconsistentConstructor = "warning"
reportUnknownVariableType = "information"
reportMissingParameterType = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "error"
reportUnnecessaryContains = "error"
reportImplicitOverride = "error"
reportShadowedImports = "error"
reportAny = false
